Fixed search result overlay on mobile.

--- a/Assignment 2/dynamic/css/styles-mobile.css
+++ b/Assignment 2/dynamic/css/styles-mobile.css
@@ -25,7 +25,6 @@ header {
     position: relative;
 }
 
-
 #mobile-menu-button {
     position: absolute;
     right: 10px;
@@ -374,12 +373,10 @@ figure.no-margin > img {
     display: none;
 }
 
-
 /* Search Results */
 .search-results {
     position: relative;
     max-width: 460px;
-    min-height: 250px;
     margin: 0px auto; /* Center */
 }
 
@@ -388,6 +385,7 @@ figure.no-margin > img {
 .search-results > button {
     height: 25px;
     width: 25px;
+
 }
 
 .button-right {
@@ -395,6 +393,7 @@ figure.no-margin > img {
     position: absolute;
     right: 10px;
     top: 40%;
+
 }
 
 .button-left {
